added null to CreateProductDto and tested and implemented PUT
